--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,11 @@
     <link rel="shortcut icon" type="image/png" href="./countries.png" />
   </head>
   <body>
-    <input type="text" id="search-box" />
-    <ul class="country-list"></ul>
-    <div class="country-info"></div>
+    <div class="container">
+      <input type="text" id="search-box" placeholder="search" class="input" />
+      <ul class="country-list"></ul>
+      <div class="country-info"></div>
+    </div>
 
     <script src="index.js" type="module"></script>
   </body>
